# pid1

./: .gitignore  .travis.yml  ChangeLog.md  Dockerfile  Makefile  README.md  build-docker.sh  default.nix  justfile  pid1.cabal  stack.yaml
.github/workflows/: build.yml  release.yml
app/: Main.hs
example/centos/: Dockerfile
example/slackware/: Dockerfile
example/ubuntu/: Dockerfile
src/System/Process/: PID1.hs
static-base/: Dockerfile
