name:                pid1
version:             0.1.2.0
synopsis:            Do signal handling and orphan reaping for Unix PID1 init processes
description:         Please see README.md or view Haddocks at <https://www.stackage.org/package/pid1>
homepage:            https://github.com/fpco/pid1#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
copyright:           2016 Michael Snoyman
category:            System
build-type:          Simple
extra-source-files:  README.md ChangeLog.md stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Process.PID1
  build-depends:       base >= 4 && < 5
                     , process >= 1.2
                     , unix
                     , directory
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pid1
  hs-source-dirs:      app
  main-is:             Main.hs
  if impl(ghc >= 8.0.1)
    ghc-options:         -Wall -threaded -rtsopts=none -no-rtsopts-suggestions
  else
    ghc-options:         -Wall -threaded -rtsopts=none
  build-depends:       base
                     , pid1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/pid1
